url: ${APP_URL} # Change Exercises Database
---
# User Story: Change Exercises Database
- launchApp
- tapOn: "⚙️"
- assertVisible: "⚙️ More"
# Tap on the URL input and type the test database address
- tapOn: "⚙️ Exercise Database URL"
- tapOn:
    text: "https://gfauredev.github.io/free-exercise-db/"
    optional: true
- eraseText
- inputText: "http://localhost:8080"
# Save the new URL by tapping the save button
- tapOn: "💾"
