# User Story 8 – Search Exercises in Browser (Web PWA)
# Search for exercises in the Exercise List and verify filtering works.
url: http://localhost:8080
---
- launchApp
- tapOn:
    css: "nav > .exercises"
- assertVisible: "📚 Exercises"
- tapOn: "Search exercises, muscles, or categories..."
- inputText: "pullups"
- assertVisible: "Pullups"
- assertVisible: "strength"
- assertVisible: "pull"
- assertVisible: "lats"
- assertNotVisible: "push"
- assertNotVisible: "chest"
- assertNotVisible: "triceps"
- eraseText
# TODO Test "infinite" scroll
- assertVisible: "📚 Exercises"
- assertVisible: "\\+"
